hedtools/tests/data/invalid_wiki_schemas/HED_schema_out_of_order.mediawiki
HED version:8.0.0-alpha.1


This is a prologue line.
This is a second prologue line.

!# end schema

!# start schema